# TermMaster

./: .gitignore  .gitmodules  CMakeLists.txt
TermMaster/: ConfigSerialDialog.cpp  ConfigSerialDialog.h  ConfigSerialDialog.ui  ConfigTerminalDialog.cpp  ConfigTerminalDialog.h  ConfigTerminalDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Registree.cpp  SerialTerminal.cpp  SerialTerminal.h  SettingsDialog.ui  TermMaster.pro  Terminal.cpp  Terminal.h  main.cpp  res.qrc  utils.cpp  utils.h  version.h  yaml-cpp.pri
TermMaster/core/: Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  Path.cpp  Path.h  Registree.h  SettingsManager.cpp  SettingsManager.h  utils.h
TermMaster/dialogs/: SettingsDialog.cpp  SettingsDialog.h
TermMaster/modules/Base/: BaseModule.cpp  BaseModule.h  BaseModuleApi.cpp  BaseModuleApi.h
TermMaster/modules/Base/dialogs/: SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
TermMaster/modules/Base/widgets/: ConfigBaseWidget.cpp  ConfigBaseWidget.h
TermMaster/modules/Base/windows/: MainWindow.cpp  MainWindow.h  MainWindow.ui
TermMaster/modules/Terminal/: TerminalModule.cpp  TerminalModule.h  TerminalModuleApi.cpp  TerminalModuleApi.h
TermMaster/modules/Terminal/widgets/: ConfigSerialWidget.cpp  ConfigSerialWidget.h  ConfigTerminalEmulationWidget.h  ConfigTerminalWindowWidget.h
TermMaster/widgets/: ConfigBaseWidget.cpp  ConfigBaseWidget.h  ConfigSerialWidget.cpp  ConfigSerialWidget.h  ConfigTerminalEmulationWidget.cpp  ConfigTerminalEmulationWidget.h  ConfigTerminalWindowWidget.cpp  ConfigTerminalWindowWidget.h  ConfigTerminalWindowWidget.ui
src/app/: CMakeLists.txt  main.cpp
src/app/core/: CMakeLists.txt  CommandManager.cpp  CommandManager.h  RandomNames.cpp  RandomNames.h  SettingsManager.cpp  SettingsManager.h  WindowManager.cpp  WindowManager.h
src/app/core/widgets/: AboutDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/app/dialogs/: SettingsDialog.ui
src/app/utils/: CMakeLists.txt  CompileTime.h  Path.cpp  Path.h  Registree.cpp  Singleton.h  utils.h
src/app/widgets/: CMakeLists.txt
src/app/widgets/config/: ConfigBaseWidget.h  ConfigSerialWidget.ui  ConfigTerminalEmulationWidget.h  ConfigTerminalWindowWidget.cpp
src/lib/: CMakeLists.txt
src/lib/extensionsystem/: CMakeLists.txt  Module.h  ModuleManager.cpp  ModuleManager.h
src/lib/utils/: CMakeLists.txt  Path.cpp  Path.h  Singleton.h
src/modules/: CMakeLists.txt
src/modules/core/: ActionManager.cpp  ActionManager.h  CMakeLists.txt  CommandManager.cpp  CommandManager.h  CoreModule.cpp  CoreModule.h  CoreModule.json  SettingsManager.cpp  SettingsManager.h  WindowManager.cpp  WindowManager.h
src/modules/core/dialogs/: SettingsDialog.cpp  SettingsDialog.h
src/modules/core/widgets/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/modules/core/widgets/config/: ConfigSerialWidget.cpp  ConfigSerialWidget.h  ConfigTerminalEmulationWidget.cpp  ConfigTerminalEmulationWidget.ui  ConfigTerminalWindowWidget.h
src/modules/terminal/: CMakeLists.txt  TerminalModule.cpp  TerminalModule.h  TerminalModule.json
